[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://crosshair.png" type="Texture" id=2]
[ext_resource path="res://fps_shooter_sprites.png" type="Texture" id=3]
[ext_resource path="res://HUD_zombies_left.gd" type="Script" id=4]
[ext_resource path="res://HUD_current_level.gd" type="Script" id=5]
[ext_resource path="res://HUD_current_hp.gd" type="Script" id=6]
[ext_resource path="res://HUD_you_win.gd" type="Script" id=7]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="CanvasLayer/Control"]
position = Vector2( 256, -256 )
texture = ExtResource( 3 )
hframes = 4

[node name="HUD_zombies_left" type="Label" parent="CanvasLayer"]
margin_left = 476.0
margin_top = 4.0
margin_right = 530.0
margin_bottom = 25.0
text = "HUD_zombies_left"
script = ExtResource( 4 )

[node name="HUD_current_level" type="Label" parent="CanvasLayer"]
margin_right = 137.0
margin_bottom = 86.0
text = "HUD_current_level"
script = ExtResource( 5 )

[node name="HUD_current_hp" type="Label" parent="CanvasLayer"]
margin_left = 927.0
margin_top = 3.0
margin_right = 1027.0
margin_bottom = 27.0
text = "HUD_current_hp"
script = ExtResource( 6 )

[node name="HUD_you_win" type="Label" parent="CanvasLayer"]
margin_left = 294.088
margin_top = 193.063
margin_right = 352.608
margin_bottom = 215.063
rect_scale = Vector2( 7.39, 5.32 )
text = "You win!"
align = 1
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/shoot = SubResource( 3 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -2000 )
